[package]
name = "tinyweb"
version = "0.4.2"
edition = "2024"
description = "Minimal synchronous HTTP/1.1 server with SSE support"
license = "MIT"
keywords = ["http", "server", "sse", "web", "minimal"]
categories = ["web-programming::http-server", "network-programming"]
repository = "https://github.com/linfir/tinyweb"
readme = "README.md"

[dependencies]
log = "0.4.4"

[dev-dependencies]
matchit = "0.9.2"
