[package]
name = "tinyweb"
version = "0.10.0"
edition = "2024"
description = "Minimal synchronous HTTP/1.1 server with SSE support"
license = "MIT"
keywords = ["http", "server", "sse", "web", "minimal"]
categories = ["web-programming::http-server", "network-programming"]
repository = "https://github.com/linfir/tinyweb"
readme = "README.md"

[dependencies]
log = "0.4.4"

[dev-dependencies]
ctrlc = "3"
env_logger = "0.11.11"
matchit = "0.9.2"
